[tool.poetry]
name = "nerdtube"
version = "0.1.0"
description = ""
authors = ["NerdBow <108768934+NerdBow@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytube = "^15.0.0"
customtkinter = "^5.2.2"
ffmpeg-python = "^0.2.0"
pillow = "^10.2.0"
black = "^24.1.1"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100